# squad-replay

./: .gitignore  AI_DISCLOSURE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: bench.yml
benches/: classify.rs  common.rs  parse.rs  serialization.rs
docs/: schema.json
src/: classify.rs  cli.rs  compat.rs  error.rs  formats.rs  lib.rs  main.rs  model.rs  parser.rs  sqrb.rs  sqrj.rs  unreal_names.rs
tests/: cli.rs  fixture_snapshots.rs  library.rs
tests/common/: mod.rs
tests/fixtures/snapshots/: rtb-fallujah-seeding-20260406.json  rtb-jensens-range-wpmc-vs-turkey-20260407.json
